--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">evc2</string>
+    <string name="login_username">Username</string>
+    <string name="login_password">Password</string>
 </resources>
