--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">evc2</string>
     <string name="login_username">Username</string>
     <string name="login_password">Password</string>
+    <string name="login_button">Login</string>
+    <string name="login_cancel_button">Cancel</string>
 </resources>
