--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="login_password">Password</string>
     <string name="login_button">Login</string>
     <string name="login_cancel_button">Cancel</string>
+    <string name="login_error_message">La contraseña debe contener al menos 6 carácteres</string>
 </resources>
