--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     <string name="login_button">Login</string>
     <string name="login_cancel_button">Cancel</string>
     <string name="login_error_message">La contraseña debe contener al menos 6 carácteres</string>
+    <string name="shoe_title">Titulo</string>
+    <string name="shoe_description">hola, este es una nueva zapatilla :v</string>
 </resources>
